@@ -94,8 +94,8 @@ void ai::save(ostream& out, const class game& g) const
 	write_bool(out, attackrun);
 	write_bool(out, evasive_manouver);
 	write_double(out, rem_manouver_time);
-	g.write(out, parent);
-	g.write(out, followme);
+	g.write(out, &(*parent));
+	g.write(out, &(*followme));
 	g.write(out, myconvoy);
 	write_bool(out, has_contact);
 	write_double(out, contact.x);
@@ -108,8 +108,8 @@ void ai::save(ostream& out, const class game& g) const
 void ai::relax(game& gm)
 {
 	has_contact = false;
-	state = (followme != 0) ? followobject : followpath;
-	gm.send(new command_set_throttle(parent, sea_object::aheadsonar));
+	state = (followme.is_null()) ? followpath : followobject;
+	gm.send(new command_set_throttle(&(*parent), sea_object::aheadsonar));
 	attackrun = false;
 }
 
@@ -123,7 +123,7 @@ void ai::attack_contact(const vector3& c)
 void ai::follow(sea_object* t)
 {
 	followme = t;
-	state = (followme != 0) ? followobject : followpath;
+	state = (followme.is_null()) ? followpath : followobject;
 }
 
 void ai::act(class game& gm, double delta_time)
@@ -134,6 +134,8 @@ void ai::act(class game& gm, double delta_time)
 	} else {
 		remaining_time = AI_THINK_CYCLE_TIME * ( 0.75f + 0.25f * rnd ( 1 ) );
 	}
+	
+	if (parent.is_null()) return;
 
 	switch (type) {
 		case escort: act_escort(gm, delta_time); break;
@@ -143,9 +145,9 @@ void ai::act(class game& gm, double delta_time)
 	
 	if (zigzagstate > 0) {	// this depends on ai type, convoys zigzag different! fixme
 		if (zigzagstate == 5)
-			gm.send(new command_rudder_left(parent));
+			gm.send(new command_rudder_left(&(*parent)));
 		else if (zigzagstate == 15)
-			gm.send(new command_rudder_right(parent));
+			gm.send(new command_rudder_right(&(*parent)));
 		++zigzagstate;
 		if (zigzagstate > 20)
 			zigzagstate = 1;
@@ -185,7 +187,7 @@ void ai::act_escort(game& gm, double delta_time)
 	double dist = 1e12;
 	submarine* nearest_contact = 0;
 	list<submarine*> subs;
-	gm.visible_submarines(subs, parent);
+	gm.visible_submarines(subs, &(*parent));
 	for (list<submarine*>::iterator it = subs.begin(); it != subs.end(); ++it) {
 		double d = (*it)->get_pos().xy().square_distance(parent->get_pos().xy());
 		if (d < dist) {
@@ -197,7 +199,7 @@ void ai::act_escort(game& gm, double delta_time)
 		fire_shell_at(gm, *nearest_contact);
 		attack_contact(nearest_contact->get_pos());
 		if (myconvoy) myconvoy->add_contact(nearest_contact->get_pos());
-		gm.send(new command_set_throttle(parent, sea_object::aheadflank));
+		gm.send(new command_set_throttle(&(*parent), sea_object::aheadflank));
 		attackrun = true;
 	}
 
@@ -206,13 +208,13 @@ void ai::act_escort(game& gm, double delta_time)
 	
 		// listen for subs
 		list<submarine*> hearable_subs;
-		gm.sonar_submarines(hearable_subs, parent);
+		gm.sonar_submarines(hearable_subs, &(*parent));
 		if (hearable_subs.size() > 0) {
 			attack_contact(hearable_subs.front()->get_pos());
 		} else {
 			// ping around to find something
 			list<vector3> contacts;
-			gm.ping_ASDIC(contacts, parent, true);//fixme add command!!!!
+			gm.ping_ASDIC(contacts, &(*parent), true);//fixme add command!!!!
 			if (contacts.size() > 0) {
 				// fixme: choose best contact!
 				if (myconvoy) myconvoy->add_contact(contacts.front());
@@ -238,7 +240,7 @@ void ai::act_escort(game& gm, double delta_time)
 		double cd = delta.length();
 		if (cd > DC_ATTACK_RUN_RADIUS && !attackrun) {
 			list<vector3> contacts;
-			gm.ping_ASDIC(contacts, parent, false, angle(delta));//fixme add command
+			gm.ping_ASDIC(contacts, &(*parent), false, angle(delta));//fixme add command
 			if (contacts.size() > 0) {	// update contact
 				// fixme: choose best contact!
 				if (myconvoy) myconvoy->add_contact(contacts.front());
@@ -246,7 +248,7 @@ void ai::act_escort(game& gm, double delta_time)
 			}
 			//set_zigzag((cd > 500 && cd < 2500));//fixme test hack, doesn't work
 		} else {
-			gm.send(new command_set_throttle(parent, sea_object::aheadflank));
+			gm.send(new command_set_throttle(&(*parent), sea_object::aheadflank));
 			attackrun = true;
 			//set_zigzag(false);//fixme test hack, doesn't work
 		}
@@ -266,7 +268,7 @@ void ai::act_escort(game& gm, double delta_time)
 
 void ai::act_dumb(game& gm, double delta_time)
 {
-	if (state == followobject && followme != 0) {
+	if (state == followobject && !followme.is_null()) {
 		set_course_to_pos(gm, followme->get_pos().xy());
 	} else if (state == followpath) {
 		if (waypoints.size() > 0) {
@@ -363,20 +365,20 @@ bool ai::set_course_to_pos(game& gm, const vector2& pos)
 	double r2 = 1.0/parent->get_turn_rate().rad();
 	if (a <= 0) {	// target is behind us
 		if (b < 0) {	// target is left
-			gm.send(new command_head_to_ang(parent, parent->get_heading() - angle(180), true));
+			gm.send(new command_head_to_ang(&(*parent), parent->get_heading() - angle(180), true));
 		} else {
-			gm.send(new command_head_to_ang(parent, parent->get_heading() + angle(180), false));
+			gm.send(new command_head_to_ang(&(*parent), parent->get_heading() + angle(180), false));
 		}
 		return false;
 	} else if (r2 > r1) {	// target can not be reached with smallest curve possible
 		if (b < 0) {	// target is left
-			gm.send(new command_head_to_ang(parent, parent->get_heading() + angle(180), false));
+			gm.send(new command_head_to_ang(&(*parent), parent->get_heading() + angle(180), false));
 		} else {
-			gm.send(new command_head_to_ang(parent, parent->get_heading() - angle(180), true));
+			gm.send(new command_head_to_ang(&(*parent), parent->get_heading() - angle(180), true));
 		}
 		return false;
 	} else {	// target can be reached, steer curve
-		gm.send(new command_head_to_ang(parent, angle::from_math(atan2(d.y, d.x)), (b < 0)));
+		gm.send(new command_head_to_ang(&(*parent), angle::from_math(atan2(d.y, d.x)), (b < 0)));
 //	this code computes the curve that hits the target
 //	but it is much better to turn fast and then steam straight ahead.
 //	however, the straight path does not hit the target exactly, since the ship moves
