@@ -116,7 +116,7 @@ protected:
 	list<pair<double, job*> > jobs;	// generated by interface construction, no gameplay data
 	
 	// the player and matching ui (note that playing is not limited to submarines!)
-	sea_object* player;
+	sea_object* player;//fixme: better use a ref here? it would be better...
 	user_interface* ui;	// can be zero, is set from game's owner
 
 	list<sink_record> sunken_ships;
