@@ -1,3 +1,8 @@
+2004-06-18  Thorsten Jordan  <thorsten_jordan@gmx.de>
+	* replaced sea_object* by special reference class.
+	  that way pointers will get erased automatically when a sea_object is killed.
+	  some fixme's remain (convoy still uses pointers).
+
 2004-05-28  Thorsten Jordan  <thorsten_jordan@gmx.de>
 	* coastmap.cpp
 	  - fixed 2d map display basically
